<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/tour_logo"
                    android:layout_marginTop="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintVertical_bias=".3"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            app:endIconMode="clear_text"
                            app:boxStrokeColor="@color/app_toolbar"
                            app:boxStrokeWidth="1dp"
                            android:layout_margin="5dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:id="@+id/email" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            app:endIconMode="password_toggle"
                            app:boxStrokeColor="@color/app_toolbar"
                            app:boxStrokeWidth="1dp"
                            android:layout_margin="5dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:id="@+id/password" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/btn_background"
                            android:fontFamily="@font/aladin"
                            android:text="Sign in"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/noAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_have_an_account_sign_up"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_gravity="end"
                            android:layout_margin="5dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/errMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card"
                    android:layout_margin="20sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/red"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>